samples/_failures_safe/1761181795_47de9f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_933fd91f.c: In function ‘main’:
./samples/SAFE/__tmp_933fd91f.c:149:5: error: expected declaration or statement at end of input
  149 |     }
      |     ^
